# poetry-workspaces

./: .gitignore  README.md  mypy.ini  workspace.toml
bases/demo/first/: main.py
bases/demo/my_endpoint/: main.py
bases/demo/my_handler/: main.py
bases/demo/second/: main.py
components/demo/greet/: message.py
components/greet/: message.py
components/text/: data.py
my_first_project/: Dockerfile  pyproject.toml
my_first_project/my_project/: main.py
my_second_project/: Dockerfile  pyproject.toml
my_second_project/second/: main.py
projects/fifth/: pyproject.toml
projects/fifth/fifth/: main.py
projects/first/: Dockerfile  pyproject.toml
projects/fourth/: pyproject.toml
projects/fourth/src/fourth/: main.py
projects/fourth/src/fourth/helpers/: message.py
projects/second/: Dockerfile  pyproject.toml
projects/third/: pyproject.toml
projects/third/libs/hello/world/: hello.py
projects/third/third/: main.py
