[tool.poetry]
name = "poetry-workspaces"
version = "0.1.0"
description = ""
authors = ["David Vujic <david@vujic.se>"]
license = "MIT"
readme = "README.md"
packages = [
            {include = "my_project"},
            {include = "components/log", from = "../"},
            {include = "components/greet", from = "../"},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"