[tool.poetry]
name = "first_project"
version = "0.1.0"
description = ""
authors = ["David Vujic <david@vujic.se>"]
license = "MIT"
readme = "README.md"
packages = [
            {include = "demo/first", from = "../../bases"},
            {include = "demo/log", from = "../../components"},
            {include = "demo/greet", from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"